--- a/_posts/2015-10-02-episode-1.md
+++ b/_posts/2015-10-02-episode-1.md
@@ -1,8 +1,10 @@
 ---
-layout: episode
+layout: post
 title: Episode 1 - Introductions
 
 tags: podcast, intro
 ---
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226622654&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
