Add show notes for first 2 episodes

--- a/_posts/2015-10-06-episode-2.md
+++ b/_posts/2015-10-06-episode-2.md
@@ -5,6 +5,13 @@ title: Episode 2 - StartupSlam
 tags: podcast
 ---
 
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/227285028&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+{% comment %}
+{% soundcloud https://soundcloud.com/faviconvalley/ep2 %}
+{% endcomment %}
+{% soundcloud tracks 227285028 %}
+
+Episode 2 is finally here! Brandon talks with some students from University of Victoria, Joe Czepil and Dominique Charlebois, during the Sendwithus StartupSlam event (startupslam.io) about what they're doing in the tech space and how they want to change the world.
+
+Please feel free to provide feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
 
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
