--- a/_posts/2015-10-02-episode-1.md
+++ b/_posts/2015-10-02-episode-1.md
@@ -5,6 +5,13 @@ title: Episode 1 - Introductions
 tags: podcast, intro
 ---
 
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226622654&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+{% comment %}
+{% soundcloud https://soundcloud.com/faviconvalley/ep1 %}
+{% endcomment %}
+{% soundcloud tracks 226622654 %}
+
+This is the first episode of many to come for the Favicon Valley Podcast. Brandon lays out the basic details of the show and where he wants to take it for future episodes. He hopes you enjoy this small presentation so that it can lead to bigger things.
+
+Please feel free to provide feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
 
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
