Update some things, change URL structure to be what I wanted in the first place

--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -1,17 +1,18 @@
 ---
-layout: post
-title: Episode 1 - Introductions
+title: Ep. 1 - Introductions
+date: 02-10-2015
 
-tags: podcast, intro
+# Remnants of original url structure
+redirect_from:
+  - /episode-1.html
+  - /ep-1.html
+  - /ep1.html
 ---
-
-{% comment %}
-{% soundcloud https://soundcloud.com/faviconvalley/ep1 %}
-{% endcomment %}
-{% soundcloud tracks 226622654 %}
 
 This is the first episode of many to come for the Favicon Valley Podcast. Brandon lays out the basic details of the show and where he wants to take it for future episodes. He hopes you enjoy this small presentation so that it can lead to bigger things.
 
-Please feel free to provide feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
+Feel free to leave feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
 
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
+
+<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18673?style=dark' width='100%'></iframe>
