--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -1,17 +1,18 @@
 ---
-layout: post
-title: Episode 2 - StartupSlam
+title: Ep. 2 - StartupSlam
+date: 06-10-2015
 
-tags: podcast
+# Remnants of original url structure
+redirect_from:
+  - /episode-2.html
+  - /ep-2.html
+  - /ep2.html
 ---
-
-{% comment %}
-{% soundcloud https://soundcloud.com/faviconvalley/ep2 %}
-{% endcomment %}
-{% soundcloud tracks 227285028 %}
 
 Episode 2 is finally here! Brandon talks with some students from University of Victoria, Joe Czepil and Dominique Charlebois, during the Sendwithus StartupSlam event (startupslam.io) about what they're doing in the tech space and how they want to change the world.
 
-Please feel free to provide feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
+Feel free to leave feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
 
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
+
+<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18675?style=dark' width='100%'></iframe>
