Update episode 2 with image, add lazysizes image lazeyloading

--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -11,7 +11,9 @@ redirect_from:
 
 Episode 2 is finally here! Brandon talks with some students from University of Victoria, Joe Czepil and Dominique Charlebois, during the Sendwithus StartupSlam event (startupslam.io) about what they're doing in the tech space and how they want to change the world.
 
-Feel free to leave feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
+{% picture src:https://farm6.staticflickr.com/5751/22106872969_122937d471_z_d.jpg %}
+
+Feel free to leave feedback on Twitter ([@faviconvalley](https://twiter.com/faviconvalley) or email hello@faviconvalley.show)
 
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
 
