--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -1,15 +1,21 @@
 ---
-title: Ep. 4 -
-date: 12-11-2015
-draft: true
+title: Ep 4 - Interview with Samuel Clay of Newsblur
+date: 21-12-2015
 ---
 
-[STUFF HERE]
+Brandon talks to [Samuel Clay](https://twitter.com/samuelclay) the founder of Newsblur.com about the Google Reader shutdown in 2013 and how it has affected Newsblur's growth.
 
-Favicon Valley is also looking for a sponsor for future episodes so reach out if you would like to know more.
+Show Notes:
 
-Feel free to leave feedback on Twitter ([@faviconvalley](https://twitter.com/faviconvalley) or email hello@faviconvalley.show)
+- [Revsys](http://www.revsys.com/?ref=faviconvalley.show) for tuning and performance of databases (~29mins)
+- [TurnTouch](http://turntouch.com/?ref=faviconvalley.show) is a new hardware product to control your internet of things, coming soon to Kickstarter (~38mins)
+- [Grain and Mortar](http://grainandmortar.com/?ref=faviconvalley.show) is a strategy, branding, and design company
+- [VisualSearch.js](https://documentcloud.github.io/visualsearch/?ref=faviconvalley.show) "enhances ordinary search boxes with the ability to autocomplete faceted search queries"
+- [DocumentCloud](https://www.documentcloud.org/opensource?ref=faviconvalley.show) is a tool for journalists to embed media into news stories (~43mins)
 
-Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
+The show is also looking for sponsors for future episodes, so reach out on Twitter ([@faviconvalley](https://twitter.com/faviconvalley) or email hello@faviconvalley.show) if you would like to know more about this exciting opportunity!
 
-[MEDIA HERE]
+Show intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
+Interview intro music provided by <http://freemusicarchive.org/music/Podington_Bear/Upbeat/GoodTimes_1375>
+
+<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/23516?style=dark' width='100%'></iframe>
