Fix NewsBlur camel caseing

--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -1,9 +1,9 @@
 ---
-title: Ep 4 - Interview with Samuel Clay of Newsblur
+title: Ep 4 - Interview with Samuel Clay of NewsBlur
 date: 21-12-2015
 ---
 
-Brandon talks to [Samuel Clay](https://twitter.com/samuelclay) the founder of Newsblur.com about the Google Reader shutdown in 2013 and how it has affected Newsblur's growth.
+Brandon talks to [Samuel Clay](https://twitter.com/samuelclay) the founder of NewsBlur.com about the Google Reader shutdown in 2013 and how it has affected NewsBlur's growth.
 
 Show Notes:
 
