Add direct link to MP3 file for each episode

--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -16,3 +16,5 @@ Feel free to leave feedback on Twitter (@faviconvalley or email hello@faviconval
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18673?style=dark' width='100%'></iframe>
+
+Direct download: <http://audio.simplecast.fm/18673.mp3>
