--- a/_episodes/3.md
+++ b/_episodes/3.md
@@ -14,3 +14,5 @@ Feel free to leave feedback on Twitter ([@faviconvalley](https://twitter.com/fav
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/19586?style=dark' width='100%'></iframe>
+
+Direct download: <http://audio.simplecast.fm/19586.mp3>
