--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -19,3 +19,5 @@ Show intro/outro music provided by <http://freemusicarchive.org/music/Professor_
 Interview intro music provided by <http://freemusicarchive.org/music/Podington_Bear/Upbeat/GoodTimes_1375>
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/23516?style=dark' width='100%'></iframe>
+
+Direct download: <http://audio.simplecast.fm/23516.mp3>
