--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -18,3 +18,5 @@ Feel free to leave feedback on Twitter ([@faviconvalley](https://twiter.com/favi
 Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18675?style=dark' width='100%'></iframe>
+
+Direct download: <http://audio.simplecast.fm/18675.mp3>
