Add preliminary twitter player card, awaiting approval

--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -1,6 +1,7 @@
 ---
 title: Ep 4 - Interview with Samuel Clay of NewsBlur
 date: 21-12-2015
+audio_url: http://audio.simplecast.fm/23516.mp3
 ---
 
 Brandon talks to [Samuel Clay](https://twitter.com/samuelclay) the founder of NewsBlur.com about the Google Reader shutdown in 2013 and how it has affected NewsBlur's growth.
@@ -20,4 +21,4 @@ Interview intro music provided by <http://freemusicarchive.org/music/Podington_B
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/23516?style=dark' width='100%'></iframe>
 
-Direct download: <http://audio.simplecast.fm/23516.mp3>
+Direct download: <{{ audio_url }}>
