--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -1,6 +1,7 @@
 ---
 title: Ep. 1 - Introductions
 date: 02-10-2015
+audio_url: http://audio.simplecast.fm/18673.mp3
 
 # Remnants of original url structure
 redirect_from:
@@ -17,4 +18,4 @@ Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18673?style=dark' width='100%'></iframe>
 
-Direct download: <http://audio.simplecast.fm/18673.mp3>
+Direct download: <{{ audio_url }}>
