--- a/_episodes/3.md
+++ b/_episodes/3.md
@@ -1,7 +1,7 @@
 ---
 title: Ep. 3 - Email
 date: 5-11-2015
-audio_url: http://audio.simplecast.fm/19586.mp3
+audio_url: https://audio.simplecast.fm/19586.mp3
 ---
 
 Episode 3 is finally here after a month delay! Brandon talks about your favourite topic: email. The Grunt plugin mentioned is also available here: <https://github.com/leemunroe/grunt-email-workflow>
@@ -16,4 +16,4 @@ Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/19586?style=dark' width='100%'></iframe>
 
-Direct download: <{{ audio_url }}>
+Direct download: <{{ page.audio_url }}>
