--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -1,7 +1,7 @@
 ---
 title: Ep. 2 - StartupSlam
 date: 06-10-2015
-audio_url: http://audio.simplecast.fm/18675.mp3
+audio_url: https://audio.simplecast.fm/18675.mp3
 
 # Remnants of original url structure
 redirect_from:
@@ -20,4 +20,4 @@ Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/
 
 <iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18675?style=dark' width='100%'></iframe>
 
-Direct download: <{{ audio_url }}>
+Direct download: <{{ page.audio_url }}>
