Major refactor of episodes

--- a/_episodes/1.md
+++ b/_episodes/1.md
@@ -1,7 +1,7 @@
 ---
 title: Ep. 1 - Introductions
 date: 02-10-2015
-audio_url: https://audio.simplecast.fm/18673.mp3
+episode_id: 18673
 
 # Remnants of original url structure
 redirect_from:
@@ -11,11 +11,3 @@ redirect_from:
 ---
 
 This is the first episode of many to come for the Favicon Valley Podcast. Brandon lays out the basic details of the show and where he wants to take it for future episodes. He hopes you enjoy this small presentation so that it can lead to bigger things.
-
-Feel free to leave feedback on Twitter (@faviconvalley or email hello@faviconvalley.show)
-
-Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
-
-<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18673?style=dark' width='100%'></iframe>
-
-Direct download: <{{ page.audio_url }}>
