--- a/_episodes/3.md
+++ b/_episodes/3.md
@@ -1,19 +1,13 @@
 ---
 title: Ep. 3 - Email
 date: 5-11-2015
-audio_url: https://audio.simplecast.fm/19586.mp3
+episode_id: 19586
+
+show_notes:
+  - text: Lee Munroe's Grunt Email workflow
+    url: https://github.com/leemunroe/grunt-email-workflow
+  - text: Sendwithus "How To Send Email Like A Startup" Guide
+    url: https://www.sendwithus.com/resources/guide
 ---
 
-Episode 3 is finally here after a month delay! Brandon talks about your favourite topic: email. The Grunt plugin mentioned is also available here: <https://github.com/leemunroe/grunt-email-workflow>
-
-Sendwithus "How To Send Email Like A Startup" Guide: <https://www.sendwithus.com/resources/guide>
-
-Favicon Valley is also looking for a sponsor for future episodes so reach out if you would like to know more.
-
-Feel free to leave feedback on Twitter ([@faviconvalley](https://twitter.com/faviconvalley) or email hello@faviconvalley.show)
-
-Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
-
-<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/19586?style=dark' width='100%'></iframe>
-
-Direct download: <{{ page.audio_url }}>
+Episode 3 is finally here after a month delay! Brandon talks about your favourite topic: email.
