--- a/_episodes/2.md
+++ b/_episodes/2.md
@@ -1,7 +1,7 @@
 ---
 title: Ep. 2 - StartupSlam
 date: 06-10-2015
-audio_url: https://audio.simplecast.fm/18675.mp3
+episode_id: 18675
 
 # Remnants of original url structure
 redirect_from:
@@ -13,11 +13,3 @@ redirect_from:
 Episode 2 is finally here! Brandon talks with some students from University of Victoria, Joe Czepil and Dominique Charlebois, during the Sendwithus StartupSlam event (startupslam.io) about what they're doing in the tech space and how they want to change the world.
 
 {% picture src:https://farm6.staticflickr.com/5751/22106872969_122937d471_z_d.jpg %}
-
-Feel free to leave feedback on Twitter ([@faviconvalley](https://twiter.com/faviconvalley) or email hello@faviconvalley.show)
-
-Intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
-
-<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/18675?style=dark' width='100%'></iframe>
-
-Direct download: <{{ page.audio_url }}>
