--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -1,24 +1,28 @@
 ---
 title: Ep 4 - Interview with Samuel Clay of NewsBlur
 date: 21-12-2015
-audio_url: https://audio.simplecast.fm/23516.mp3
+episode_id: 23516
+
+show_notes:
+  - text: Samuel Clay
+    url: http://samuelclay.com
+  - text: Samuel Clay on Twitter
+    url: https://twitter.com/samuelclay
+  - text: NewsBlur.com
+    url: https://newsblur.com
+  - text: Revsys for tuning and performance of databases
+    url: http://www.revsys.com/?ref=faviconvalley.show
+    time: ~29mins
+  - text: TurnTouch is a new hardware product to control your internet of things, coming soon to Kickstarter
+    url: http://turntouch.com/?ref=faviconvalley.show
+    time: ~38mins
+  - text: Grain and Mortar is a strategy, branding, and design company
+    url: http://grainandmortar.com/?ref=faviconvalley.show
+  - text: VisualSearch.js "enhances ordinary search boxes with the ability to autocomplete faceted search queries"
+    url: https://documentcloud.github.io/visualsearch/?ref=faviconvalley.show
+  - text: DocumentCloud is a tool for journalists to embed media into news stories
+    url: https://www.documentcloud.org/opensource?ref=faviconvalley.show
+    time: ~43mins
 ---
 
 Brandon talks to [Samuel Clay](https://twitter.com/samuelclay) the founder of NewsBlur.com about the Google Reader shutdown in 2013 and how it has affected NewsBlur's growth.
-
-Show Notes:
-
-- [Revsys](http://www.revsys.com/?ref=faviconvalley.show) for tuning and performance of databases (~29mins)
-- [TurnTouch](http://turntouch.com/?ref=faviconvalley.show) is a new hardware product to control your internet of things, coming soon to Kickstarter (~38mins)
-- [Grain and Mortar](http://grainandmortar.com/?ref=faviconvalley.show) is a strategy, branding, and design company
-- [VisualSearch.js](https://documentcloud.github.io/visualsearch/?ref=faviconvalley.show) "enhances ordinary search boxes with the ability to autocomplete faceted search queries"
-- [DocumentCloud](https://www.documentcloud.org/opensource?ref=faviconvalley.show) is a tool for journalists to embed media into news stories (~43mins)
-
-The show is also looking for sponsors for future episodes, so reach out on Twitter ([@faviconvalley](https://twitter.com/faviconvalley) or email hello@faviconvalley.show) if you would like to know more about this exciting opportunity!
-
-Show intro/outro music provided by <http://freemusicarchive.org/music/Professor_Kliq/Bust_This_Bust_That/Bust_This_Bust_That>
-Interview intro music provided by <http://freemusicarchive.org/music/Podington_Bear/Upbeat/GoodTimes_1375>
-
-<iframe frameborder='0' height='36px' scrolling='no' seamless src='https://simplecast.fm/e/23516?style=dark' width='100%'></iframe>
-
-Direct download: <{{ page.audio_url }}>
