--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -2,6 +2,9 @@
 title: Ep 4 - Interview with Samuel Clay of NewsBlur
 date: 21-12-2015
 episode_id: 23516
+sponsors: [
+  'audible'
+]
 
 show_notes:
   - text: Samuel Clay
