Update the player to use the new styles (which I had no idea existed apparently)

--- a/_episodes/4.md
+++ b/_episodes/4.md
@@ -2,6 +2,7 @@
 title: Ep 4 - Interview with Samuel Clay of NewsBlur
 date: 21-12-2015
 episode_id: 23516
+player_style: large
 sponsors: [
   'audible'
 ]
