--- a/_episodes/6.md
+++ b/_episodes/6.md
@@ -2,6 +2,7 @@
 title: Ep 6 - Products & Tools I Use Daily
 date: 18-02-2016
 episode_id: 27269
+player_style: large
 sponsors: [
   'iwantmyname'
 ]
@@ -11,8 +12,8 @@ show_notes:
     url: http://www.openplanetsoftware.com/just-press-record/
   - text: Garageband
     url: http://www.apple.com/ca/mac/garageband/
-  - text: Simplecast.fm
-    url: https://simplecast.fm
+  - text: simplecast.com
+    url: https://simplecast.com
   - text: Linkpack
     url: https://linkpack.io
   - text: Newsblur
