--- a/_episodes/7.md
+++ b/_episodes/7.md
@@ -2,6 +2,7 @@
 title: Ep 7 - Interview with Julian Lepinski of Cast
 date: 03-03-2016
 episode_id: 28249
+player_style: large
 sponsors: [
   'iwantmyname'
 ]
