--- a/_episodes/5.md
+++ b/_episodes/5.md
@@ -2,6 +2,7 @@
 title: Ep 5 - Interview with Brock Whitten of Surge.sh
 date: 05-01-2016
 episode_id: 23896
+player_style: large
 sponsors: [
   'audible'
 ]
